--- a/src/styles.css
+++ b/src/styles.css
@@ -94,18 +94,65 @@ main {
   background-color: #444;
 }
 
-/* Nanobots */
 .nanobot-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 2px;
 }
 
 .nanobot {
-  width: 12px;
-  height: 12px;
+  width: 20px;
+  height: 20px;
+  background-color: var(--player-color);
+  mask-image: var(--nanobot-icon);
+  mask-size: contain;
+  mask-repeat: no-repeat;
+  mask-position: center;
+  -webkit-mask-image: var(--nanobot-icon);
+  -webkit-mask-size: contain;
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  animation: pop-in 0.3s ease;
+  position: absolute;
+}
+
+.nanobot-count-1 .nanobot:nth-child(1) { top: 50%; left: 50%; transform: translate(-50%, -50%); }
+
+.nanobot-count-2 .nanobot:nth-child(1) { top: 50%; left: calc(50% - 10px); transform: translate(-50%, -50%); }
+.nanobot-count-2 .nanobot:nth-child(2) { top: 50%; left: calc(50% + 10px); transform: translate(-50%, -50%); }
+
+.nanobot-count-3 .nanobot:nth-child(1) { top: calc(50% - 10px); left: 50%; transform: translate(-50%, -50%); }
+.nanobot-count-3 .nanobot:nth-child(2) { top: calc(50% + 5px); left: calc(50% - 10px); transform: translate(-50%, -50%); }
+.nanobot-count-3 .nanobot:nth-child(3) { top: calc(50% + 5px); left: calc(50% + 10px); transform: translate(-50%, -50%); }
+
+.nanobot {
+  width: 20px;
+  height: 20px;
+  background-color: var(--player-color);
+  mask-image: var(--nanobot-icon);
+  mask-size: contain;
+  mask-repeat: no-repeat;
+  mask-position: center;
+  -webkit-mask-image: var(--nanobot-icon);
+  -webkit-mask-size: contain;
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  animation: pop-in 0.3s ease;
+  position: absolute;
+}
+
+.nanobot-count-1 .nanobot:nth-child(1) { top: 50%; left: 50%; transform: translate(-50%, -50%); }
+
+.nanobot-count-2 .nanobot:nth-child(1) { top: 50%; left: calc(50% - 8px); transform: translate(-50%, -50%); }
+.nanobot-count-2 .nanobot:nth-child(2) { top: 50%; left: calc(50% + 8px); transform: translate(-50%, -50%); }
+
+.nanobot-count-3 .nanobot:nth-child(1) { top: calc(50% - 8px); left: 50%; transform: translate(-50%, -50%); }
+.nanobot-count-3 .nanobot:nth-child(2) { top: calc(50% + 8px); left: calc(50% - 8px); transform: translate(-50%, -50%); }
+.nanobot-count-3 .nanobot:nth-child(3) { top: calc(50% + 8px); left: calc(50% + 8px); transform: translate(-50%, -50%); }
+  background-color: var(--player-color);
   mask-image: var(--nanobot-icon);
   mask-size: contain;
   mask-repeat: no-repeat;
