--- a/src/styles.css
+++ b/src/styles.css
@@ -139,18 +139,38 @@ header {
   height: 90%;
   max-width: 22px;
   max-height: 22px;
-  background-color: var(--player-color);
-  mask-image: var(--nanobot-icon);
+  position: absolute;
+  filter: drop-shadow(0 0 4px var(--player-color));
+}
+
+.nanobot-avatar,
+.nanobot-frame {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.nanobot-avatar {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  mask-image: var(--nanobot-mask);
   mask-size: contain;
   mask-repeat: no-repeat;
   mask-position: center;
-  -webkit-mask-image: var(--nanobot-icon);
+  -webkit-mask-image: var(--nanobot-mask);
   -webkit-mask-size: contain;
   -webkit-mask-repeat: no-repeat;
   -webkit-mask-position: center;
-  animation: pop-in 0.2s ease-out;
-  position: absolute;
-  filter: drop-shadow(0 0 4px var(--player-color));
+}
+
+.nanobot-frame {
+  background-image: var(--nanobot-frame);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .nanobot-count-1 .nanobot:nth-child(1) { top: 50%; left: 50%; transform: translate(-50%, -50%); }
